Bug 1416991 - Fix perspective indexing in partial DL builds - r=mattwoodrow

Perspective item indices (used to produce unique per-frame keys) were generated
by incrementing a counter in the builder when building a perspective display
item. This caused problems with retained display lists, because an unmodified
perspective could be skipped during a partial build, causing other perspectives
to be incorrectly numbered and then incorrectly merged with the previous
retained display list.

To fix this, we need to always increment the counter if there is likely to be
a perspective, before that item may be skipped.

MozReview-Commit-ID: Edn7lUOLuPw